doc(exercicio02): Exercicio

--- a/modulo03/Aula02/exercicio/index.html
+++ b/modulo03/Aula02/exercicio/index.html
@@ -9,25 +9,52 @@
   <body>
       <div id="barra"> PORTAL CRESCER </div>
       <div id="container">
-          <div id="esquerda" class="conteudo">
-              <div id="conteudo_esquerda">
-                <div id="subtitulo1" class="conteudoEsquerdo">
+          <div class="conteudo esquerda">
+              <div id="materiaEsquerda">
+                <div id="subtitulo1" class="subtitulo">
                   <h1>Em "Gotham": na 3ª temporada, Jim Gordon pode ter versão maligna revelada!</h1>
                 </div>
-                <div id="materia_esquerda" class="conteudoEsquerdo">
-                  Além disso, Arlequina pode entrar na história o quanto antes!
+                <div class="conteudoInterno">
+                  <img src="imgEsquerda.jpg" ></img>
+                  <p class="primeiraLetra">Além disso, Arlequina pode entrar na história o quanto antes!
                   Para a felicidade dos fãs de "Gotham", a série teve seu grande retorno nos Estados Unidos
                   nessa segunda-feira (24), mas não é só isso que está na boca do povo, viu... Afinal, já não é de hoje
                   que rola o papo que Arlequina estaria na história e a ansiedade dos expectadores fica cada vez maior! E,
                   acreditem, isso pode acontecer o quanto antes! Como assim, Purebreak?
-                  Em entrevista à CBR, o produtor Danny Cannon fala o assunto, insinuando que Barbara Kean pode se tornar
+                  <p><br>Em entrevista à CBR, o produtor Danny Cannon fala o assunto, insinuando que Barbara Kean pode se tornar
                   Arlequina a qualquer momento. "Tudo que posso dizer é que mudamos a personagem (Barbara) pois sabíamos o
                   que ela poderia fazer. Em algum momento ela vai evoluir novamente, e isso é tudo que posso dizer", diz.
                 </div>
+                <div class="conteudoRodape">
+                     <p> 2 dias atras
+                </div>
              </div>
           </div>
-          <div id="direita" class="conteudo">
-            
+          <div class="conteudo direita">
+              <div class="conteudoInterno">
+                <div id="subtitulo02" class="subtitulo">
+                    <h1>The Flash | Produtor fala sobre como personagens lidarão com revelação da identidade de Savitar</h1>
+                    <p>Em "I Know Who You Are", episódio 20 da terceira temporada de The Flash, Barry Allen (Grant Gustin) ficou
+                    finalmente sabendo qual é a identidade de Savitar.
+                </div>
+                <div class="conteudoInterno">
+                    <img src="imgDireita.jpg" ></img>
+                    <p class="primeiraLetra"> A informação não poderia ser mais assustadora, já que o
+                    vilão é uma versão do futuro do próprio herói. O produtor executivo Andrew Kreisberg contou em entrevista
+                    à Entertainment Weekly como será para os demais personagens e para o próprio Barry lidar com a descoberta.
+                    "Essas cenas que vêm por aí nos próximos episódios são uma mistura de horror e tristeza. O rosto dele é
+                    obviamente muito perturbador - pela cicatriz e o olho branco, mas também por ver uma pessoa amada tão
+                    distorcida. Barry Allen provavelmente tem a alma mais gentil de todos os personagens do universo DC da CW,
+                    ver o quão fundo ele pode cair é aterrorizante e doloroso."
+                    <br><p>Os três episódios finais da terceira temporada de The Flash ganharam um novo vídeo promocional que mostra um
+                    pouco do que está por vir, incluindo o confronto entre Barry e Savitar - veja aqui.
+                    O próximo capítulo vai ao ar em 9 de maio nos Estados Unidos, enquanto no Brasil o seriado é transmitido
+                    pelo canal pago Warner Channel.
+                  </div>
+              </div>
+              <div class="conteudoRodape">
+                   <p> 30 minutos atras
+              </div>
           </div>
       </div>
   </body>
