--- a/modulo03/aula03/trabalhoStretFigther/index.html
+++ b/modulo03/aula03/trabalhoStretFigther/index.html
@@ -5,13 +5,14 @@
     <meta charset="utf-8">
     <title> Street Figther </title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
   </head>
   <body>
       <div class="container">
           <ul class="menu">
-              <li class="menu-item"><a class"menu-item-link" href="#">inicio</a></li>
+              <li class="menu-item ativo"><a class"menu-item-link" href="#">inicio</a></li>
               <li class="menu-item"><a class"menu-item-link" href="https://goo.gl/QX9z0z" target="_blank">Noticias</a></li>
-              <li class="menu-item"><a class"menu-item-link" href="#"></a> Ficha Técnica </li>
+              <li class="menu-item"><a class"menu-item-link" href="ficha-tecnica.html"> Ficha Técnica </a></li>
               <li class="menu-item"><a class"menu-item-link" href="#"> Sobre </a></li>
           </ul>
           <div class="content">
@@ -19,23 +20,23 @@
                 <div class="conteudo-geral">
                     <h2> Sumario </h2>
                     <ul class="menu-sumario">
-                      <li class="sumario-item"><a href="#" class="sumario-link"> O Jogo </a></li>
-                      <li class="sumario-item"><a href="#" class="sumario-link"> Historia </a></li>
-                      <li class="sumario-item"><a href="#" class="sumario-link"> Jogos da série </a></li>
-                      <li class="sumario-item"><a href="#" class="sumario-link"> Street Figther </a></li>
-                      <li class="sumario-item"><a href="#" class="sumario-link"> Street Figther II </a></li>
-                      <li class="sumario-item"><a href="#" class="sumario-link"> Street Figther III </a></li>
-                      <li class="sumario-item"><a href="#" class="sumario-link"> Street Figther Alpha </a></li>
+                      <li class="sumario-item"><a href="#ojogo" class="sumario-link"> O Jogo </a></li>
+                      <li class="sumario-item"><a href="#historia" class="sumario-link"> Historia </a></li>
+                      <li class="sumario-item"><a href="#serie" class="sumario-link"> Jogos da série </a></li>
+                      <li class="sumario-item"><a href="#SF1" class="sumario-link"> Street Figther </a></li>
+                      <li class="sumario-item"><a href="#SF2" class="sumario-link"> Street Figther II </a></li>
+                      <li class="sumario-item"><a href="#SF3" class="sumario-link"> Street Figther III </a></li>
+                      <li class="sumario-item"><a href="#SFA" class="sumario-link"> Street Figther Alpha </a></li>
                     </ul>
                 </div>
                 <div class="conteudo-geral">
-                    <h2>O jogo</h2>
+                    <h2 id"ojogo">O jogo</h2>
                     <p>Street Fighter é uma popular série de jogos de luta na qual o jogador controla
                     lutadores de diversas partes do mundo, cada qual com seus golpes especiais.
                     A série é propriedade da empresa de jogos Capcom e teve seu primeiro jogo lançado em agosto de 1987.
                     Algumas séries são integradas à SF, como     por exemplo Final Fight e Slam Masters.
 
-                    <h2>História</h2>
+                    <h2 id="historia">História</h2>
                     <p>O primeiro jogo de luta foi Heavyweight Champ, lançado pela SEGA para os arcades em 1976.
                     O próximo só apareceria vários anos depois, em 1984, com o jogo Karate Champ da DataEast.
                     Este é considerado o primeiro jogo de luta para dois jogadores, apresentando dois controles.
@@ -45,19 +46,19 @@
                     Street Fighter
                </div>
               <div class="conteudo-geral">
-                    <h2>Jogos da série</h2>
+                    <h2  id="serie">Jogos da série</h2>
 
-                    <h3>Street Fighter</h3>
+                    <h3 id="SF1">Street Fighter</h3>
 
-                    Street Fighter fez pouco impacto em seu lançamento. Porém seus controles eram inovadores,
+                    <p>Street Fighter fez pouco impacto em seu lançamento. Porém seus controles eram inovadores,
                     com 1 joystick e 2 botões hidráulicos, que dependendo da força davam potência diferente ao golpe.
                     Como geralmente se batia com muita força, foram trocados pelos 6 botões que se tornaram tradição
                     na série. O     game acompanhava Ryu ou Ken , duelando com dez lutadores de 5 países.
-                    O game introduziu os golpes especiais da Punho Ondulante, que ficariam com Ryu e Ken pelo resto da
+                    <p>O game introduziu os golpes especiais da Punho Ondulante, que ficariam com Ryu e Ken pelo resto da
                     série. Sagat, ainda sem a cicatriz no peito, é o chefe final do jogo. Os demais personagens são Eagle,
                     Lee, Joe, Gen, Geki, Retsu,     Adon, Mike e Birdie.
 
-                    <h3>Street Fighter II</h3>
+                    <h3 id="SF2">Street Fighter II</h3>
 
                     <p>Inicialmente lançado como Street Fighter II: The World Warrior em 1991, SF II tornou-se um grande sucesso,
                     popularizando o estilo de jogos de luta,que virou febre mundial nos Arcades.
@@ -66,15 +67,16 @@
                     <p>Honda e Ryu (mostrando cenários tipicamente orientais) e inclusive a selva amazônica brasileira na fase relativa
                     ao Blanka.
 
-                    <h3>Street Fighter III</h3>
+                    <h3 id="SF3">Street Fighter III</h3>
 
-                    Street Fighter III fora lançado em 1997. Não teve tanto sucesso quanto o II.
+                    <p>Street Fighter III fora lançado em 1997. Não teve tanto sucesso quanto o II.
                     Um dos motivos atribuídos foi pelo advento de jogos de luta em 3D como Tekken, e a
                     ausência de muitos personagens famosos do jogo anterior.
 
-                    <h3>Street Fighter Alpha<h3>
+                    <h3 id="SFA">Street Fighter Alpha</h3>
 
-                    Street Fighter Alpha é uma subsérie, com três games e uma compilação por hora.
+                    <p>Street Fighter Alpha é uma subsérie, com três games e uma compilação por hora.
+                    <br><a href="#"> voltar para inicio </a>
               </div>
           </div>
       </div>
