refact(exercicioHTML/CSS): correcao do css do exercicio

--- a/modulo03/aula03/trabalhoStretFigther/ficha-tecnica.html
+++ b/modulo03/aula03/trabalhoStretFigther/ficha-tecnica.html
@@ -14,7 +14,7 @@
               <li class="menu-item"><a class"menu-item-link" href="index.html">inicio</a></li>
               <li class="menu-item"><a class"menu-item-link" href="https://goo.gl/QX9z0z" target="_blank">Noticias</a></li>
               <li class="menu-item ativo"><a class"menu-item-link" href="#"> Ficha Técnica </a></li>
-              <li class="menu-item"><a class"menu-item-link" href="#"> Sobre </a></li>
+              <li class="menu-item"><a class"menu-item-link" href="sobre.html"> Sobre </a></li>
           </ul>
           <div class="content">
                 <div class="nome"><h1>Ficha Tecnica</h1></div>
