feat(ExercicioHTML): exercicio to-do list

--- a/modulo03/aula03/trabalhoStretFigther/sobre.html
+++ b/modulo03/aula03/trabalhoStretFigther/sobre.html
@@ -16,7 +16,7 @@
               <li class="menu-item"><a class"menu-item-link" href="ficha-tecnica.html"> Ficha Técnica </a></li>
               <li class="menu-item ativo"><a class"menu-item-link" href="#"> Sobre </a></li>
           </ul>
-          <div class="content clearfix">
+          <div class="content">
                 <div class="nome"><h1>Sobre</h1></div>
                 <div class="conteudo-geral">
                     <div class="nome-personagem"><h3> Rafael Barreto </h3></div>
