feat(modulo04exercicio03): modificar estilo no css

--- a/modulo05/aula01/index.html
+++ b/modulo05/aula01/index.html
@@ -3,13 +3,11 @@
     <script type="text/javascript" src="https://code.angularjs.org/1.6.4/angular.js"></script>
     <script type="text/javascript" src="controller.js" ></script>
 </head>
-<!--        Exemplo 01
+<!---    Exemplo 01 -->
 <body ng-app ="aula01" ng-controller="pokemon" >
     <input type="text" ng-model="pokemon.nome">
     <p> {{ pokemon.nome }} </p>    
     <p> {{ pokemon.descricao }}
 </body>
--->
-
 
 </html>
