--- a/modulo05/aula01/exercicio/index.html
+++ b/modulo05/aula01/exercicio/index.html
@@ -4,9 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="estilo.css">    
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">	
+
+     <script type="text/javascript" src="https://code.angularjs.org/1.6.4/angular.js"></script>
+	<script type="text/javascript" src = "controller.js"></script>
+	
+
     <title>Document</title>
 </head>
-<body>
-    
+<body ng-app="filtro">
+	<div class="container " ng-controller="Pokemons">
+		<div class="row">
+			<div class=" col-md-6 col-md-offset-3 formulario" >
+				<fieldset>
+				<legend> Pesquisa Pokemon</legend>
+					<form>
+						<div class="formulario-pesquisa">
+							Pokemon <input id="formulario-pesquisa-input" type="text" class="form-control" placeholder="digite o nome do pokemon ex.: pikachu" ng-model="texto">	
+						</div>
+						<div id="formulario-campo-opcoes">				
+							<input type="button" value="limpar" ng-click="texto = '' ">					
+							<select ng-options="valor.nome  as valor.nome for valor in pokemon" ng-model="texto"></select>					
+						</div>
+						<table class="table table-hover">
+							<tbody>
+								<tr>
+									<td>Nome</td>
+									<td>Tipo</td>
+								</tr>
+								<tr ng-repeat="valor in pokemon | filter: {nome : texto}">
+									<td>{{valor.nome}}</td>
+									<td>{{valor.tipo}}</td>
+								</tr>
+							</tbody>						
+						</table>				
+					</form>
+				</fieldset>				
+			</div>	
+		</div>
+	</div>
+	
 </body>
-</html>
+</html> 
