refact(modulo05tema): arrumado estilo da table

--- a/modulo05/aula02/exerccio/index.html
+++ b/modulo05/aula02/exerccio/index.html
@@ -24,7 +24,7 @@
 							<tbody>
 								<tr>
 									<td>Nome</td>
-									<td>Tipo</td>
+									<td>Aula</td>
 								</tr>
 								<tr ng-repeat="instrutor in instrutores | orderBy:'numero' "">
 									<td>{{instrutor | aulaFilter}}</td>
