feat(modulo05aula03): exercicios feito em aula

--- a/modulo05/aula02/exerccio/index.html
+++ b/modulo05/aula02/exerccio/index.html
@@ -28,7 +28,7 @@
 								</tr>
 								<tr ng-repeat="instrutor in instrutores | orderBy:'numero' "">
 									<td>{{instrutor | aulaFilter}}</td>
-									<td>{{instrutor.nome}}</td>
+									<td>{{instrutor.nome | mascada}}</td>
 								</tr>
 							</tbody>						
 						</table>				
