--- a/modulo05/CRUD/CRUDInstutores.html
+++ b/modulo05/CRUD/CRUDInstutores.html
@@ -182,25 +182,31 @@
 					</div>
 					<div class="col-md-7">
 						<legend> cadastro/Edicao </legend>
-						<table class="table table-hover">
+						<table class="table table-bordered">
 							<tr>
 								<td><span> incluir nova Aula </span></td>
 							</tr>							
 							<tr>
-								<td><input type="text" ng-model="novaAula.nome"></td>
-								<td><button ng-click="incluirAula()"> incluir </button></td>
+								<td>
+									<input type="text" ng-model="novaAula.nome">
+									<button ng-click="incluirAula()"> incluir </button>
+								</td>
 							</tr>
 							<tr>
 								<td><span> Atualizar aula </span></td>
 							</tr>
-							<tr>								
+							<tr>							
+								<td>
+									<input type="text" ng-model="aulaNovoNome">
+									<input type="button" value="Alterar" ng-click="alterarAula()">
+								</td>
+							</tr>
+							<tr>
 								<td>									
 									<select ng-model="nomeDoCampo">
 										<option ng-repeat="aula in aulas">{{aula.nome}}</option>
 									</select>
-								</td>								
-								<td><input type="text" ng-model="aulaNovoNome"></td>
-								<td><input type="button" value="Alterar" ng-click="alterarAula()"></td>								
+								</td>									
 							</tr>
 						</table>					
 					</div>
