--- a/modulo06/aula03/Chat/FrontEnd/index.html
+++ b/modulo06/aula03/Chat/FrontEnd/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"   >
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,26 +11,15 @@
 
     <title>One For All</title>
 </head>
-<body>
+<body ng-app="app">   
     <div class="container">
-        <div class="col-md-10 col-md-offset-1 chat">
-            <div class="row">
-             <div class="col-md-6 col-md-offset-3 titulo"><h3>------------------- One For All -------------------</div>
-              <div class="col-md-10 col-md-offset-1 chat-textBox">chat aqui</div>  <!-- talvez trocar div por outro elemento -->                    
-            </div> 
-            <div class="row">
-                <div class="col-md-10 col-md-offset-1 mensagem-box">
-                    <div class="row">
-                        <div class="col-md-10 mensagem">
-                            <input class="form-control" type="text">                            
-                        </div>
-                        <div class="col-md-2 enviar">
-                            <input class="btn btn-warning" type="button" value="Enviar">
-                        </div>
-                    </div>
-                </div>
-            </div>           
-        </div>
-    </div>
+       <ng-view></ng-view>
+    </div>       
+    <script src="https://code.angularjs.org/1.6.4/angular.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.min.js"></script>
+    <script src="mainController.js"></script>
+    <script src="services.js"></script>
+    <script src="js/loginController.js"></script>
+    <script src="js/chatController.js"></script>
 </body>
 </html>
