--- a/modulo06/aula03/Chat/FrontEnd/chat.html
+++ b/modulo06/aula03/Chat/FrontEnd/chat.html
@@ -2,14 +2,15 @@
     <div class="row">
         <div class="col-md-6 col-md-offset-3 titulo"><h3>------------------- One For All -------------------</div>
         <div class="col-md-10 col-md-offset-1 chat-textBox"> <!-- talvez trocar div por outro elemento -->                    
-            <div class="row texto-box">
+            <div class="row texto-box" ng-repeat="mensagem in mensagens"  >
                 <div class="col-md-2 foto">
                     <img src="http://www.smashbros.com/images/og/pikachu.jpg" alt="">
                 </div>
                 <div class="col-md-10 texto">
                     <div class="usuario">
-                        {{meuUsuario}} say:<br>
-                         {{mensagens.Mensagen}}
+                        {{Mensagen.usuario.nome}} say:<br>
+                        {{mensagen.Mensagen}}
+                        <div class="hora"></div>
                     </div>                      
                 </div>
             </div>
