feat(modulo06ExercicioBiblioteca): alterado interface

--- a/modulo06/aula05/FrontEnd/index.html
+++ b/modulo06/aula05/FrontEnd/index.html
@@ -18,9 +18,14 @@
          <div class="col-md-3 borda">campo login</div>
     </div>
     <div class="container">
-        <div class="col-md-12 lancamentos borda"> lancamentos </div> 
+        <div class="col-md-12 lancamentos borda"> 
+            <div class="col-md-3 livros-lancamento borda"></div>
+            <div class="col-md-3 livros-lancamento borda"></div>
+            <div class="col-md-3 livros-lancamento borda"></div>
+            <div class="col-md-3 livros-lancamento borda"></div>            
+         </div> 
          <div class="corpo ">
-              <div class="col-md-10 col-md-offset-1 livros">                
+              <div class="col-md-10 col-md-offset-2 livros">                
                 <div class="row">
                     <div class="col-md-3 livro borda">
                         <div class="row titulo borda"> Games Of Thrones </div>
