--- a/modulo06/aula05/FrontEnd/index.html
+++ b/modulo06/aula05/FrontEnd/index.html
@@ -46,6 +46,7 @@
 <script src="https://code.angularjs.org/1.6.4/angular.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.min.js"></script>
 <script src="js/mainController.js"></script>
+<script src="js/services.js"></script>
 <script src="js/homeController.js"></script>
 </body>
 </html>
