--- a/modulo06/TrabalhoLocacao/index.html
+++ b/modulo06/TrabalhoLocacao/index.html
@@ -18,13 +18,13 @@
 <body ng-app="locadora">
     
     <div class="menu-global">
-        <span>  Nome </span>
+        <span>  Mega Fest </span>
     </div>  
     <div class="container"> 
-        <div class="menu-lateral" ng-if="estaLogado">
-            <div class="itens-menu"><span>Cadastrar Cliente</span></div>
-            <div class="itens-menu"><span>Vendas</span></div>
-            <div class="itens-menu"><span>Relatorio Mensal</span></div>                       
+        <div class="menu-lateral" ng-if="$root.mostrar">  <!--aqui vai um ng-if-->
+            <a  ng-href="#!/cadastro"><div class="itens-menu"><span>Cadastrar Cliente</span></div></a>
+            <a ng-href="#!/vendas"><div class="itens-menu"><span>Vendas</span></div></a>
+            <a ng-href=""><div class="itens-menu"><span>Relatorio Mensal</span></div></a>                       
         </div>
         <div class="template">
             <ng-view></ng-view>
@@ -32,5 +32,9 @@
     </div>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.min.js"></script>
 <script src="js/mainController.js"></script>
+<script src="js/clienteService.js"></script>
+<script src="js/loginController.js"></script>
+<script src="js/vendasController.js"></script>
+<script src="js/cadastroController.js"></script>
 </body>
 </html>
