feat(modulo06TrabalhoFestaLocacao): adicionar autenticacao no backend

--- a/modulo06/TrabalhoLocacao/index.html
+++ b/modulo06/TrabalhoLocacao/index.html
@@ -24,7 +24,7 @@
         <div class="menu-lateral" ng-if="$root.mostrar">  <!--aqui vai um ng-if-->
             <a  ng-href="#!/cadastro"><div class="itens-menu"><span>Cadastrar Cliente</span></div></a>
             <a ng-href="#!/vendas"><div class="itens-menu"><span>Vendas</span></div></a>
-            <a ng-href=""><div class="itens-menu"><span>Relatorio Mensal</span></div></a>                       
+            <a ng-href="#!/relatorio"><div class="itens-menu"><span>Relatorios</span></div></a>                       
         </div>
         <div class="template">
             <ng-view></ng-view>
@@ -34,6 +34,7 @@
 <script src="js/mainController.js"></script>
 <script src="js/clienteService.js"></script>
 <script src="js/loginController.js"></script>
+<script src="js/relatoioController.js"></script>
 <script src="js/vendasController.js"></script>
 <script src="js/cadastroController.js"></script>
 </body>
