--- a/modulo06/TrabalhoLocacao/index.html
+++ b/modulo06/TrabalhoLocacao/index.html
@@ -31,7 +31,10 @@
         </div>
     </div>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.6/ngStorage.min.js" type="text/javascript"></script>
+<script src="https://rawgit.com/cwi-crescer-2017-1/instrutores/master/modulo-05-angularjs/auth/auth.module.js" type="text/javascript"></script>
 <script src="js/mainController.js"></script>
+<script src="auth.module.js"></script>
 <script src="js/clienteService.js"></script>
 <script src="js/loginController.js"></script>
 <script src="js/relatoioController.js"></script>
