--- a/modulo08/RedeSocial/FrontEnd/index.html
+++ b/modulo08/RedeSocial/FrontEnd/index.html
@@ -12,6 +12,7 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilo.css">
     <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/cadastro.css">
 
 </head>
 
@@ -24,18 +25,17 @@
 
     <div class="container">
         <div class="col-md-4 col-md-offset-4 login">
-            <form >
-                <div class="usuario-login">
-                    <label>Usuario</label>
-                </div>
-                <input class="form-control" type="text" placeholder="Nome de Usuario" autofocus>
-                <div class="senha-login">Senha</div>
-                <input class="form-control" type="text" placeholder="Senha">
+            <form>
+                <br>
+                <legend>Cadastro</legend>
+                <div class="cadastro nome"><label>Nome</label><div>
+                <input class="form-control" type="text" placeholder="Joao da silva" autofocus>
+                <div class="cadastro email"><label>E-mail</label></div>
+                <input class="form-control" type="text" placeholder="Teste@mail.com">
+                <div class="cadastro senha"><label>Senha</label></div>
+                <input class="form-control" type="password" placeholder="123456">
                 <div class="botao-login">
-                    <input type="button" class="btn btn-primary btn-login" value="Logar">
-                </div>
-                <div class="cadastrar">
-                    <a href="#"> cadastrar </a>
+                    <input type="button" class="btn btn-primary btn-login" value="Cadastrar">
                 </div>
             </form>
         </div>
