--- a/modulo08/RedeSocial/FrontEnd/index.html
+++ b/modulo08/RedeSocial/FrontEnd/index.html
@@ -24,23 +24,13 @@
     </div>
 
     <div class="container">
-        <div class="col-md-4 col-md-offset-4 login">
-            <form>
-                <br>
-                <legend>Cadastro</legend>
-                <div class="cadastro nome"><label>Nome</label><div>
-                <input class="form-control" type="text" placeholder="Joao da silva" autofocus>
-                <div class="cadastro email"><label>E-mail</label></div>
-                <input class="form-control" type="text" placeholder="Teste@mail.com">
-                <div class="cadastro senha"><label>Senha</label></div>
-                <input class="form-control" type="password" placeholder="123456">
-                <div class="botao-login">
-                    <input type="button" class="btn btn-primary btn-login" value="Cadastrar">
-                </div>
-            </form>
+        <div class="col-md-4 col-md-offset-4 login tela-cadastro">
+            <ng-view></ng-view>
         </div>
     </div>
 
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.6/ngStorage.min.js" type="text/javascript"></script>
 </body>
 
 </html>
