--- a/modulo08/RedeSocial/FrontEnd/index.html
+++ b/modulo08/RedeSocial/FrontEnd/index.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<body>
+<body ng-app="plusUltra">
     <div class="navegacao">
         <nav>
             <h1>Plus Ultra!!!</h1>
@@ -29,8 +29,9 @@
         </div>
     </div>
 
+<script src="https://code.angularjs.org/1.6.4/angular.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.6/ngStorage.min.js" type="text/javascript"></script>
+<script src="js/mainController.js"></script>
 </body>
 
 </html>
