feat(modulo08RedeSocial):Implementar rotas da tela de logine  cadastro no angular

--- a/modulo08/RedeSocial/FrontEnd/index.html
+++ b/modulo08/RedeSocial/FrontEnd/index.html
@@ -16,17 +16,15 @@
 
 </head>
 
-<body ng-app="plusUltra">
+<body ng-app="plusUltra" class="fadeIn">
     <div class="navegacao">
         <nav>
             <h1>Plus Ultra!!!</h1>
         </nav>
     </div>
 
-    <div class="container">
-        <div class="col-md-4 col-md-offset-4 login tela-cadastro">
-            <ng-view></ng-view>
-        </div>
+    <div class="container">        
+            <ng-view></ng-view>        
     </div>
 
 <script src="https://code.angularjs.org/1.6.4/angular.js"></script>
