--- a/modulo08/RedeSocial/FrontEnd/index.html
+++ b/modulo08/RedeSocial/FrontEnd/index.html
@@ -19,7 +19,7 @@
 
 <body ng-app="plusUltra">
     <div class="navegacao">
-        <nav>
+        <nav class="fadeIn">
             <a href="#!/login"><h1>Plus Ultra!!!</h1></a>
         </nav>
     </div>
