--- a/modulo08/RedeSocial/FrontEnd/home.html
+++ b/modulo08/RedeSocial/FrontEnd/home.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/home.css">
+    <title>Document</title>    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">    
+    <link rel="stylesheet" href="css/home.css">    
 </head>
-<body>
-    
+<body>    
+    <div class="navegacao">
+         <nav class="itens-navegacao fadeIn">            
+            <div class="col-md-3 col-md-offset-2">nome</div>
+            <div class="col-md-3 ">solicitacoes</div>
+            <div class="col-md-3 col-md-offset-1">buscar</div>             
+        </nav>     
+    </div>
+    <div class="container">        
+                  
+    </div>         
 </body>
 </html>
