feat(redeSocial):implementar html/css da pagina home

--- a/modulo08/RedeSocial/FrontEnd/home.html
+++ b/modulo08/RedeSocial/FrontEnd/home.html
@@ -16,8 +16,26 @@
             <div class="col-md-3 col-md-offset-1">buscar</div>             
         </nav>     
     </div>
-    <div class="container">        
-                  
+    <div>        
+        <div class="barra-lateral">            
+            <div class="foto-perfil">
+                aqui vai a foto do perfil                
+            </div>            
+        </div>        
+        <div class="col-md-7 col-md-offset-2 feed">
+            <div class="card-feed-postagem col-md-8">
+                <form>
+                    <label>Alguma novidade ?</label>
+                    <textarea class="form-control" rows="3" autofocus>                       
+                    </textarea>
+                    <input type="button" class="btn btn-postar" value="Postar">
+                </form>
+            </div>
+        </div>
+        <div class="col-md-3 radio">
+            <div> <label> Radio Online </label></div>
+            <iframe width="460" height="315" src="https://www.youtube.com/embed/25hiadrrScY" frameborder="0" allowfullscreen></iframe>
+        </div>        
     </div>         
 </body>
 </html>
