--- a/modulo08/RedeSocial/FrontEnd/index.html
+++ b/modulo08/RedeSocial/FrontEnd/index.html
@@ -30,6 +30,7 @@
     <script src="https://rawgit.com/cwi-crescer-2017-1/instrutores/master/modulo-05-angularjs/auth/auth.module.js" type="text/javascript"></script>
     <script src="js/mainController.js"></script>
     <script src="auth.module.js"></script>
+    <script src="js/loginController.js"></script>
     <script src="js/cadastroController.js"></script>
     <script src="services/usuarioService.js"></script>
 </body>
