feat(redesocial): implementar angular na home page

--- a/modulo08/RedeSocial/FrontEnd/index.html
+++ b/modulo08/RedeSocial/FrontEnd/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://npmcdn.com/angular-toastr/dist/angular-toastr.css" />
     <link rel="stylesheet" href="css/estilo.css">
     <link rel="stylesheet" href="css/login.css">
-    <link rel="stylesheet" href="css/cadastro.css">
+    <link rel="stylesheet" href="css/cadastro.css">   
 
 </head>
 
@@ -32,7 +32,9 @@
     <script src="auth.module.js"></script>
     <script src="js/loginController.js"></script>
     <script src="js/cadastroController.js"></script>
+    <script src="js/homeController.js"></script>
     <script src="services/usuarioService.js"></script>
+    <script src="services/homeService.js"></script>
 </body>
 
 </html>
